--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <label for="drop-down">Show:</label>
           <select name="drop-down" id="drop-down">
             <option value="ALL_TASKS">All tasks</option>
-            <option value="COMPLETED">Complited</option>
+            <option value="COMPLETED">Completed</option>
             <option value="UNCOMPLETED">Uncompleted</option>
           </select>
         </div>
